--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,7 @@
   width: 50%;
   padding: 16px;
   border: 1px solid white;
+  border-radius: 0.5em;
   animation: bounce 2s infinite;
   animation-play-state: paused;
   animation-fill-mode: none;
@@ -65,17 +66,25 @@ header {
 }
 
 /* Images inside grid that will enlarge on hover */
-.enlarge {
+.quadPic {
   width: 75%;
 }
 
 .column:hover {
   animation-play-state: running;
 }
+
 /* Remove default link formatting on grid */
 .invisLink {
   text-decoration: none;
   color: white;
+}
+
+/* Horizontal ruler styling */
+hr.thickLine {
+  border: 2px solid white;
+  border-radius: 2em;
+  width: 75%;
 }
 
 /* Animations */
