--- a/assets/style.css
+++ b/assets/style.css
@@ -83,7 +83,7 @@ header {
 /* Horizontal ruler styling */
 hr.thickLine {
   border: 2px solid white;
-  border-radius: 2em;
+  border-radius: 5%;
   width: 75%;
 }
 
