--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,7 @@
   width: 50%;
   padding: 16px;
   border: 1px solid white;
-  border-radius: 0.5em;
+  border-radius: 10px;
   animation: bounce 2s infinite;
   animation-play-state: paused;
   animation-fill-mode: none;
@@ -83,7 +83,7 @@ header {
 /* Horizontal ruler styling */
 hr.thickLine {
   border: 2px solid white;
-  border-radius: 5%;
+  border-radius: 2em;
   width: 75%;
 }
 
