--- a/assets/style.css
+++ b/assets/style.css
@@ -24,6 +24,21 @@
   border-radius: 0.5em;
 }
 
+/* Project Quadrants */
+div.projects {
+  display: table-cell;
+  width: 50%;
+  padding: 16px;
+  border: 1px solid white;
+  border-radius: 0.5em;
+  background-size: cover;
+  height: 20%;
+  background-repeat: no-repeat;
+}
+#autoFlashes {
+  background-image: url("autosite.png");
+}
+
 /* Format headings inside of grid */
 .column > h2 {
   text-align: center;
