--- a/assets/style.css
+++ b/assets/style.css
@@ -35,6 +35,9 @@ div.projects {
   height: 20%;
   background-repeat: no-repeat;
 }
+div.projects:hover {
+  border: 3px solid white;
+}
 #autoFlashes {
   background-image: url("autosite.png");
 }
