--- a/assets/style.css
+++ b/assets/style.css
@@ -28,16 +28,28 @@
 div.projects {
   display: table-cell;
   width: 50%;
-  padding: 16px;
+  padding: 0px;
   border: 1px solid white;
   border-radius: 0.5em;
   background-size: cover;
   height: 20%;
   background-repeat: no-repeat;
 }
+
 div.projects:hover {
   border: 3px solid white;
 }
+
+.projects > h1 {
+  background-color: rgba(58, 54, 56, 0.8);
+  margin-left: 0;
+  margin-top: 20%;
+  width: 75%;
+  padding-left: 5%;
+  padding-right: 5%
+}
+/* Background image for each project */
+
 #autoFlashes {
   background-image: url("autosite.png");
 }
