--- a/assets/style.css
+++ b/assets/style.css
@@ -44,10 +44,12 @@ div.projects:hover {
   background-color: rgba(58, 54, 56, 0.8);
   margin-left: 0;
   margin-top: 20%;
-  width: 75%;
+  width: 70%;
   padding-left: 5%;
-  padding-right: 5%
+  padding-right: 5%;
 }
+
+
 /* Background image for each project */
 
 #autoFlashes {
