--- a/assets/style.css
+++ b/assets/style.css
@@ -104,7 +104,7 @@ header {
   overflow: hidden;
   white-space: nowrap;
   background-color: rgba(58, 54, 56, 0.75);
-  position: fixed;
+  position: absolute;
   text-align: center;
   top: 0;
   padding: 0;
