--- a/assets/style.css
+++ b/assets/style.css
@@ -183,7 +183,7 @@ footer {
 }
 
 .aboutBody {
-  background-image: url("indy.jpg");
+  /*background-image: url("indy.jpg");*/
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
